book/tests/snapshots/snapshot__@examples__employees-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from e=employees\njoin salaries [==emp_no]\ngroup [e.emp_no, e.gender] (\n  aggregate [\n    emp_salary = average salaries.salary\n  ]\n)\njoin de=dept_emp [==emp_no]\njoin dm=dept_manager [\n  (dm.dept_no == de.dept_no) and s\"(de.from_date, de.to_date) OVERLAPS (dm.from_date, dm.to_date)\"\n]\ngroup [dm.emp_no, gender] (\n  aggregate [\n    salary_avg = average emp_salary,\n    salary_sd = stddev emp_salary\n  ]\n)\nderive mng_no = emp_no\njoin managers=employees [==emp_no]\nderive mng_name = s\"managers.first_name || ' ' || managers.last_name\"\nselect [mng_name, managers.gender, salary_avg, salary_sd]\n"
input_file: book/tests/prql/examples/employees-2.prql
---
WITH table_3 AS (
  SELECT
    e.gender,
    AVG(salaries.salary) AS _expr_0,
    e.emp_no
  FROM
    employees AS e
    JOIN salaries ON e.emp_no = salaries.emp_no
  GROUP BY
    e.emp_no,
    e.gender
),
table_1 AS (
  SELECT
    AVG(table_2._expr_0) AS salary_avg,
    STDDEV(table_2._expr_0) AS salary_sd,
    dm.emp_no
  FROM
    table_3 AS table_2
    JOIN dept_emp AS de ON table_2.emp_no = de.emp_no
    JOIN dept_manager AS dm ON dm.dept_no = de.dept_no
    AND (de.from_date, de.to_date) OVERLAPS (dm.from_date, dm.to_date)
  GROUP BY
    dm.emp_no,
    table_2.gender
)
SELECT
  managers.first_name || ' ' || managers.last_name AS mng_name,
  managers.gender,
  table_0.salary_avg,
  table_0.salary_sd
FROM
  table_1 AS table_0
  JOIN employees AS managers ON table_0.emp_no = managers.emp_no

