book/tests/snapshots/snapshot__@examples__list-equivalence-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect [salary]\n"
input_file: book/tests/prql/examples/list-equivalence-1.prql
---
SELECT
  salary
FROM
  employees

