book/tests/snapshots/snapshot__@examples__list-equivalence-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive gross_salary = salary + payroll_tax\nderive gross_cost = gross_salary + benefits_cost\n"
input_file: book/tests/prql/examples/list-equivalence-3.prql
---
SELECT
  *,
  salary + payroll_tax AS gross_salary,
  salary + payroll_tax + benefits_cost AS gross_cost
FROM
  employees

