book/tests/snapshots/snapshot__@examples__misc-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "# TODO: this table should have a column `part` with values 1..5,\n# but such data declaration is not yet supported, see #286\nlet parts = (\n    from seq_1_to_5\n)\n\nfrom pl=prospect_lists_prospects\nfilter prospect_list_id == 'cc675eee-8bd1-237f-be5e-622ba511d65e'\njoin a=accounts [a.id == pl.related_id]\njoin er=email_addr_bean_rel [er.bean_id == a.id and er.primary_address == '1']\njoin ea=email_addresses [ea.id == er.email_address_id]\nselect ea.email_address\nderive prefix = s\"regexp_replace(SUBSTRING_INDEX({email_address}, '@', 1), '[.0-9-_:]+', '.')\"\nderive stub = s\"SUBSTRING_INDEX(SUBSTRING_INDEX({prefix}, '.', part), '.', -1)\"\nselect [email_address, stub]\n"
input_file: book/tests/prql/examples/misc-0.prql
---
WITH table_1 AS (
  SELECT
    related_id
  FROM
    prospect_lists_prospects AS pl
  WHERE
    prospect_list_id = 'cc675eee-8bd1-237f-be5e-622ba511d65e'
)
SELECT
  ea.email_address,
  SUBSTRING_INDEX(
    SUBSTRING_INDEX(
      regexp_replace(
        SUBSTRING_INDEX(ea.email_address, '@', 1),
        '[.0-9-_:]+',
        '.'
      ),
      '.',
      part
    ),
    '.',
    -1
  ) AS stub
FROM
  table_1 AS table_0
  JOIN accounts AS a ON a.id = table_0.related_id
  JOIN email_addr_bean_rel AS er ON er.bean_id = a.id
  AND er.primary_address = '1'
  JOIN email_addresses AS ea ON ea.id = er.email_address_id

